@@ -907,12 +907,27 @@ EMOTE=\
 Command : EMOTE\n\r\
 Usage   : EMOTE [ACTION DESCRIPTION] ... \n\r\
 Example : emote whistles at the big Dragon.\n\r\
+Example : emote whistle(s) at /dragon.\n\r\
+Example : emote whistle(s) at /dragon saying Look at /dragon-m!.\n\r\
 Short(s): \n\r\
 Causes a message to be displayed which will describe your \
 character as performing the action described by the given \
-emote message.  For instance, the above example, if done \
+emote message.  For instance, the first example, if done \
 by an adventurer named "Bob" would tell everyone else in \
-the room that "Bob whistles at the big Dragon."
+the room that "Bob whistles at the big Dragon."\n\r\
+\n\r\
+You can use contextual pronouns by inserting special codes int your strings. \
+These codes begin with a forward slash, followed by the name of a mob or item \
+that is visible in the room, followed optionally by one of the following: \n\r\
+-h : singular possessive pronouns "his" or "her"\n\r\
+-m : singular personal pronoun "him" or "her"\n\r\
+-s : name alone, or reflexive pronoun "himself" or "herself"\n\r\
+-e : subjective case personal pronoun "he" or "she"\n\r\
+'s : possessive contraction john's, your\n\r\
+-ms: reflexive/intensive pronouns "himself" or "herself" or "yourself"\n\r\
+* While many codes may be used, only one unique name is allowed per string!\n\r\
+\n\r\
+You can also end verbs with (s) or (es) to make contextually correct.
 	
 EMPTY=\
 Command : EMPTY\n\r\
